Extends templates into main.html template

--- a/templates/projects.html
+++ b/templates/projects.html
@@ -1,5 +1,13 @@
-{% include 'navbar.html' %}
+{% extends 'main.html' %}
 
-<h1>
-  Projects templates
-</h1>
+{% block content %}
+
+  <h1>
+    Projects templates
+  </h1>
+
+  <p>
+    This is the main template
+  </p>
+
+{% endblock content %}
