--- a/templates/single-project.html
+++ b/templates/single-project.html
@@ -1,3 +1,9 @@
-<h1>
-  Single project
-</h1>
+{% extends 'main.html' %}
+
+{% block content %}
+
+  <h1>
+    Single project
+  </h1>
+
+{% endblock content %}
