Create dynamic routes

--- a/projects/templates/projects/single-project.html
+++ b/projects/templates/projects/single-project.html
@@ -3,7 +3,13 @@
 {% block content %}
 
   <h1>
-    Single project
+    {{ project.title }}
   </h1>
+
+  <br>
+
+  <p>
+    {{ project.description }}
+  </p>
 
 {% endblock content %}
