--- a/projects/templates/projects/projects.html
+++ b/projects/templates/projects/projects.html
@@ -11,7 +11,7 @@
   <ul>
     {% for project in projects %}
       <li>
-        Title: {{ project.title }}
+        Title: <a href="{% url 'project' project.id %}">{{ project.title }}</a>
       </li>
     {% endfor %}
   </ul>
