--- a/projects/templates/projects/single-project.html
+++ b/projects/templates/projects/single-project.html
@@ -5,8 +5,16 @@
   <h1>
     {{ project.title }}
   </h1>
+  <hr>
 
   <br>
+
+  {% for tag in project.tags.all %}
+    <span style="border:1px solid grey">
+      {{ tag }}
+    </span>
+
+  {% endfor %}
 
   <p>
     {{ project.description }}
