Add edit project functionality

--- a/projects/templates/projects/projects.html
+++ b/projects/templates/projects/projects.html
@@ -37,6 +37,9 @@
           {{ project.created }}
         </td>
         <td>
+          <a href="{% url 'update-project' project.id %}">Edit</a>
+        </td>
+        <td>
           <a href="{% url 'project' project.id %}">View</a>
         </td>
       </tr>
