--- a/projects/templates/projects/single-project.html
+++ b/projects/templates/projects/single-project.html
@@ -2,6 +2,10 @@
 
 {% block content %}
 
+  <img style="max-width: 500px"
+       src="{{ project.featured_image.url }}"
+       alt="Project image">
+
   <h1>
     {{ project.title }}
   </h1>
