--- a/projects/templates/projects/project_form.html
+++ b/projects/templates/projects/project_form.html
@@ -6,7 +6,7 @@
     Project Form
   </h1>
 
-  <form method="POST">
+  <form action="" method="POST" enctype="multipart/form-data">
     {% csrf_token %}
 
     {{ form.as_p }}
