--- a/templates/main.html
+++ b/templates/main.html
@@ -4,16 +4,18 @@
 
 <html lang="en">
   <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description"
           content="Social network built with Django to share django portfolios" />
     <meta name="keywords" content="Django, Python, Portfolios" />
+    <link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon" />
     <link rel="stylesheet"
-          type="text/css"
-          media="screen"
-          href='{% static "styles/main.css" %}'>
-    <title>Django Devs</title>
+          href="https://cdn.iconmonstr.com/1.3.0/css/iconmonstr-iconic-font.min.css" />
+    <link rel="stylesheet" href="{% static 'uikit/styles/uikit.css' %}" />
+    <link rel="stylesheet" href="{% static 'styles/app.css' %}" />
+    <title>DjangoDevs</title>
   </head>
   <body>
 
