--- a/projects/templates/projects/single-project.html
+++ b/projects/templates/projects/single-project.html
@@ -51,7 +51,7 @@
       Feedback
     </h3>
     <h5 class="project--rating">
-      {{ project.vote_ratio }}% Positive Feedback ({{ project.vote_total }} Vote{{ project.vote_total|pluralize("s") }})
+      {{ project.vote_ratio }}% Positive Feedback ({{ project.vote_total }} Vote{{ project.vote_total|pluralize:"s" }})
     </h5>
 
     <form class="form" action="#" method="POST">
