--- a/users/templates/users/profiles.html
+++ b/users/templates/users/profiles.html
@@ -57,10 +57,13 @@
                     {{ profile.bio|slice:"200" }}
                   </p>
                   <div class="dev__skills">
-                    <span class="tag tag--pill tag--main">
-                      <small>JavaScript</small>
-                    </span>
 
+                    {% for skill in profile.skill_set.all %}
+                      <span class="tag tag--pill tag--main">
+                        <small>{{ skill }}</small>
+                      </span>
+
+                    {% endfor %}
                   </div>
                 </a>
               </div>
