--- a/projects/templates/projects/projects.html
+++ b/projects/templates/projects/projects.html
@@ -29,7 +29,7 @@
         </div>
       </div>
     </section>
-    <!-- Search Result: DevList -->
+
     <section class="projectsList">
       <div class="container">
         <div class="grid grid--three">
@@ -46,7 +46,10 @@
                       {{ project.title }}
                     </h3>
                     <p>
-                      <a class="project__author" href="{% url 'project' project.id %}">By {{ project.owner.name }}</a>
+                      <a class="project__author"
+                         href="{% url 'user-profile' project.owner.id %}">
+                        By {{ project.owner.name }}
+                      </a>
                     </p>
                     <p class="project--rating">
                       <span style="font-weight: bold;">{{ project.vote_ratio }}%</span> Positive
