--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -28,9 +28,17 @@
         <li class="header__menuItem">
           <a href="{% url 'create-project' %}">Add project</a>
         </li>
-        <li class="header__menuItem">
-          <a href="" class="btn btn--sub">Login/Sign Up</a>
-        </li>
+
+        {% if request.user.is_authenticated %}
+          <li class="header__menuItem">
+            <a href="{% url 'login' %}" class="btn btn--sub">Logout</a>
+          </li>
+        {% else %}
+          <li class="header__menuItem">
+            <a href="{% url 'login' %}" class="btn btn--sub">Login/Sign Up</a>
+          </li>
+        {% endif %}
+
       </ul>
     </nav>
   </div>
