--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -31,7 +31,7 @@
 
         {% if request.user.is_authenticated %}
           <li class="header__menuItem">
-            <a href="{% url 'login' %}" class="btn btn--sub">Logout</a>
+            <a href="{% url 'logout' %}" class="btn btn--sub">Logout</a>
           </li>
         {% else %}
           <li class="header__menuItem">
