--- a/users/templates/users/login_register.html
+++ b/users/templates/users/login_register.html
@@ -2,12 +2,36 @@
 
 {% block content %}
 
-  <form action="{% url 'login' %}" method="POST">
-    {% csrf_token %}
+  {% if page == 'register' %}
+    <h1>
+      Register User
+    </h1>
 
-    <input name="username" type="text" placeholder="Username">
-    <input name="password" type="password" placeholder="Password">
-    <input type="submit" value="Login">
-  </form>
+    <form method="POST" action="{% url 'register' %}">
+      {% csrf_token %}
+      {{ form.as_p }}
+
+      <input type="submit" value="Register">
+    </form>
+
+    <p>
+      Already have an account? <a href="{% url 'login' %}">Login</a>
+    </p>
+
+  {% else %}
+
+    <form action="{% url 'login' %}" method="POST">
+      {% csrf_token %}
+
+      <input name="username" type="text" placeholder="Username">
+      <input name="password" type="password" placeholder="Password">
+      <input type="submit" value="Login">
+
+      <p>
+        Don't have an account? <a href="{% url 'register' %}">Sign up</a>
+      </p>
+    </form>
+
+  {% endif %}
 
 {% endblock content %}
