--- a/users/templates/users/login_register.html
+++ b/users/templates/users/login_register.html
@@ -20,17 +20,57 @@
 
   {% else %}
 
-    <form action="{% url 'login' %}" method="POST">
-      {% csrf_token %}
+    <div class="auth">
+      <div class="card">
+        <div class="auth__header text-center">
+          <a href="/">
+            <img src="images/icon.svg" alt="icon" />
+          </a>
+          <h3>
+            Account Login
+          </h3>
+          <p>
+            Hello Developer, Welcome Back!
+          </p>
+        </div>
 
-      <input name="username" type="text" placeholder="Username">
-      <input name="password" type="password" placeholder="Password">
-      <input type="submit" value="Login">
+        <form action="{% url 'login' %}" method="POST" class="form auth__form">
+          {% csrf_token %}
 
-      <p>
-        Don't have an account? <a href="{% url 'register' %}">Sign up</a>
-      </p>
-    </form>
+          <div class="form__field">
+            <label for="formInput#text">
+              Username:
+            </label>
+            <input class="input input--text"
+                   id="formInput#text"
+                   type="text"
+                   name="username"
+                   placeholder="Enter your username..." />
+          </div>
+
+          <div class="form__field">
+            <label for="formInput#password">
+              Password:
+            </label>
+            <input class="input input--password"
+                   id="formInput#passowrd"
+                   type="password"
+                   name="password"
+                   placeholder="••••••••" />
+          </div>
+          <div class="auth__actions">
+            <input class="btn btn--sub btn--lg" type="submit" value="Log In" />
+            <a href="forgetpassword.html">Forget Password?</a>
+          </div>
+        </form>
+        <div class="auth__alternative">
+          <p>
+            Don’t have an Account?
+          </p>
+          <a href="{% url 'register' %}">Sign Up</a>
+        </div>
+      </div>
+    </div>
 
   {% endif %}
 
