--- a/templates/main.html
+++ b/templates/main.html
@@ -21,7 +21,7 @@
 
     {% include 'navbar.html' %}
 
-    {% if messages %}
+    <!-- {% if messages %}
       <ul class="messages">
         {% for message in messages %}
           <li {% if message.tags %} class="{{ message.tags }}"{% endif %}>
@@ -29,11 +29,29 @@
           </li>
         {% endfor %}
       </ul>
+    {% endif %} -->
+
+    {% if messages %}
+
+      {% for message in messages %}
+        <div class="alert  alert--{{ message.tags }}">
+          <p class="alert__message">
+            {{ message }}
+          </p>
+          <button class="alert__close">
+            x
+          </button>
+        </div>
+
+      {% endfor %}
+
     {% endif %}
 
     {% block content %}
 
     {% endblock content %}
-
   </body>
+  <script src="{% static 'uikit/app.js' %}"></script>
+  <script src="{% static 'js/main.js' %}"></script>
+
 </html>
