--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -22,13 +22,10 @@
         <li class="header__menuItem">
           <a href="">Inbox</a>
         </li>
-        <li class="header__menuItem">
-          <a href="">My Account</a>
-        </li>
 
         {% if request.user.is_authenticated %}
           <li class="header__menuItem">
-            <a href="{% url 'create-project' %}">Add project</a>
+            <a href="{% url 'account' %}">Account</a>
           </li>
 
           <li class="header__menuItem">
