--- a/users/templates/users/account.html
+++ b/users/templates/users/account.html
@@ -8,7 +8,8 @@
         <div class="column column--1of3">
           <div class="card text-center">
             <div class="card__body dev">
-              <a class="tag tag--pill tag--main settings__btn" href="#"><i class="im im-edit"></i> Edit</a>
+              <a class="tag tag--pill tag--main settings__btn"
+                 href="{% url 'edit-account' %}"><i class="im im-edit"></i> Edit</a>
               <img class="avatar avatar--xl dev__avatar"
                    alt="Avatar"
                    src="{{ profile.profile_image.url }}" />
