--- a/users/templates/users/account.html
+++ b/users/templates/users/account.html
@@ -91,57 +91,61 @@
                 </td>
                 <td class="settings__tableActions">
                   <a class="tag tag--pill tag--main settings__btn"
-                     href="{% url 'update-skill' skill.id %}"><i class="im im-edit"></i> Edit</a>
-                <a class="tag tag--pill tag--main settings__btn" href="#"><i class="im im-x-mark-circle-o"></i>
-              Delete</a>
-            </td>
-          </tr>
+                     href="{% url 'update-skill' skill.id %}">
 
-        {% endfor %}
-      </table>
+                    <i class="im im-edit"></i>Edit</a>
+                  <a class="tag tag--pill tag--main settings__btn"
+                     href="{% url 'delete-skill' skill.id %}">
+                    <i class="im im-x-mark-circle-o">Delete</i>
+                  </a>
+                </td>
+              </tr>
 
-      <div class="settings">
-        <h3 class="settings__title">
-          Projects
-        </h3>
-        <a class="tag tag--pill tag--sub settings__btn tag--lg"
-           href="{% url 'create-project' %}"><i class="im im-plus"></i> Add Project</a>
+            {% endfor %}
+          </table>
+
+          <div class="settings">
+            <h3 class="settings__title">
+              Projects
+            </h3>
+            <a class="tag tag--pill tag--sub settings__btn tag--lg"
+               href="{% url 'create-project' %}"><i class="im im-plus"></i> Add Project</a>
+          </div>
+
+          <table class="settings__table">
+
+            {% for project in projects %}
+              <tr>
+                <td class="settings__thumbnail">
+                  <a href="{% url 'project' project.id %}">
+                    <img src="{{ project.featured_image.url }}" alt="Project Thumbnail" />
+                  </a>
+                </td>
+                <td class="settings__tableInfo">
+                  <a href="{% url 'project' project.id %}">{{ project.title }}</a>
+                  <p>
+                    {{ project.description|slice:"150" }}
+                  </p>
+                </td>
+                <td class="settings__tableActions">
+                  <a class="tag tag--pill tag--main settings__btn"
+                     href="{% url 'update-project' project.id %}">
+                    <i class="im im-edit"></i> Edit
+                  </a>
+
+                  <a class="tag tag--pill tag--main settings__btn"
+                     href="{% url 'delete-project' project.id %}">
+                    <i class="im im-x-mark-circle-o"></i>Delete
+                  </a>
+                </td>
+              </tr>
+
+            {% endfor %}
+
+          </table>
+        </div>
       </div>
-
-      <table class="settings__table">
-
-        {% for project in projects %}
-          <tr>
-            <td class="settings__thumbnail">
-              <a href="{% url 'project' project.id %}">
-                <img src="{{ project.featured_image.url }}" alt="Project Thumbnail" />
-              </a>
-            </td>
-            <td class="settings__tableInfo">
-              <a href="{% url 'project' project.id %}">{{ project.title }}</a>
-              <p>
-                {{ project.description|slice:"150" }}
-              </p>
-            </td>
-            <td class="settings__tableActions">
-              <a class="tag tag--pill tag--main settings__btn"
-                 href="{% url 'update-project' project.id %}">
-                <i class="im im-edit"></i> Edit
-              </a>
-
-              <a class="tag tag--pill tag--main settings__btn"
-                 href="{% url 'delete-project' project.id %}">
-                <i class="im im-x-mark-circle-o"></i>Delete
-              </a>
-            </td>
-          </tr>
-
-        {% endfor %}
-
-      </table>
     </div>
-  </div>
-</div>
-</main>
+  </main>
 
 {% endblock content %}
