--- a/users/templates/users/account.html
+++ b/users/templates/users/account.html
@@ -92,11 +92,11 @@
                 <td class="settings__tableActions">
                   <a class="tag tag--pill tag--main settings__btn"
                      href="{% url 'update-skill' skill.id %}">
-
-                    <i class="im im-edit"></i>Edit</a>
+                    Edit
+                  </a>
                   <a class="tag tag--pill tag--main settings__btn"
-                     href="{% url 'delete-skill' skill.id %}">
-                    <i class="im im-x-mark-circle-o">Delete</i>
+                     href="{% url 'delete-skill' skill.id %}?next=/account">
+                    Delete
                   </a>
                 </td>
               </tr>
@@ -134,7 +134,7 @@
                   </a>
 
                   <a class="tag tag--pill tag--main settings__btn"
-                     href="{% url 'delete-project' project.id %}">
+                     href="{% url 'delete-project' project.id %}?next=/account">
                     <i class="im im-x-mark-circle-o"></i>Delete
                   </a>
                 </td>
