--- a/templates/delete_template.html
+++ b/templates/delete_template.html
@@ -2,18 +2,25 @@
 
 {% block content %}
 
-  <form action="" method="POST">
-    {% csrf_token %}
+  <main class="formPage my-xl">
+    <div class="content-box">
+      <div class="formWrapper">
+        <br>
 
-    <p>
-      Are you sure you want to delete "{{ object }}"?
-    </p>
+        <form class="form" action="" method="POST">
+          {% csrf_token %}
 
-    <a href="{% url 'projects' %}">
-      <button>
-        Go back
-      </button>
-    </a>
-    <input type="submit" value="Confirm" />
-  </form>
+          <p>
+            Are you sure you want to delete "{{ object }}"?
+          </p>
+
+          <a href="{{ request.GET.next }}" class="btn btn--sub btn--lg  my-md">
+            Go back
+          </a>
+
+          <input class="btn btn--sub btn--lg  my-md" type="submit" value="Confirm" />
+        </form>
+      </div>
+    </div>
+  </main>
 {% endblock content %}
