--- a/users/templates/users/profiles.html
+++ b/users/templates/users/profiles.html
@@ -14,7 +14,7 @@
         </div>
 
         <div class="hero-section__search">
-          <form class="form" action="#" method="get">
+          <form class="form" action="{% url 'profiles' %}" method="get">
             <div class="form__field">
               <label for="formInput#search">
                 Search Developers
@@ -22,7 +22,7 @@
               <input class="input input--text"
                      id="formInput#search"
                      type="text"
-                     name="text"
+                     name="search_query"
                      placeholder="Search by developer name" />
             </div>
 
