--- a/users/templates/users/profiles.html
+++ b/users/templates/users/profiles.html
@@ -23,6 +23,7 @@
                      id="formInput#search"
                      type="text"
                      name="search_query"
+                     value="{{ search_query }}"
                      placeholder="Search by developer name" />
             </div>
 
