--- a/projects/templates/projects/projects.html
+++ b/projects/templates/projects/projects.html
@@ -12,7 +12,7 @@
         </div>
 
         <div class="hero-section__search">
-          <form class="form" action="#" method="get">
+          <form class="form" action="{% url 'projects' %}" method="get">
             <div class="form__field">
               <label for="formInput#search">
                 Search By Projects
@@ -20,7 +20,8 @@
               <input class="input input--text"
                      id="formInput#search"
                      type="text"
-                     name="text"
+                     name="search_query"
+                     value="{{ search_query }}"
                      placeholder="Search by Project Title" />
             </div>
 
