--- a/projects/templates/projects/projects.html
+++ b/projects/templates/projects/projects.html
@@ -72,6 +72,20 @@
         </div>
       </div>
     </section>
+
+    <div class="pagination">
+      <ul class="container">
+
+        {% for page in paginator.page_range %}
+          <li>
+            <a href="?page={{ page }}" class="btn page-link">
+              {{ page }}
+            </a>
+          </li>
+        {% endfor %}
+
+      </ul>
+    </div>
   </main>
 
 {% endblock content %}
