--- a/projects/templates/projects/projects.html
+++ b/projects/templates/projects/projects.html
@@ -76,14 +76,31 @@
     <div class="pagination">
       <ul class="container">
 
-        {% for page in paginator.page_range %}
+        {% if projects.has_previous %}
           <li>
-            <a href="?page={{ page }}" class="btn page-link">
-              {{ page }}
+            <a href="?page={{ projects.previous_page_number }}"
+               class="btn page-link">
+              &#10094; Prev
             </a>
           </li>
-        {% endfor %}
+        {% endif %}
 
+        {% for page in paginator.page_range %}
+          {% if page == projects.number %}
+            <li>
+              <a href="?page={{ page }}" class="btn page-link btn--sub">
+                {{ page }}
+              </a>
+            </li>
+          {% else %}
+            <li>
+              <a href="?page={{ page }}" class="btn page-link">
+                {{ page }}
+              </a>
+            </li>
+
+          {% endif %}
+        {% endfor %}
       </ul>
     </div>
   </main>
