--- a/projects/templates/projects/projects.html
+++ b/projects/templates/projects/projects.html
@@ -12,7 +12,10 @@
         </div>
 
         <div class="hero-section__search">
-          <form class="form" action="{% url 'projects' %}" method="get">
+          <form id='searchForm'
+                class="form"
+                action="{% url 'projects' %}"
+                method="get">
             <div class="form__field">
               <label for="formInput#search">
                 Search By Projects
@@ -21,8 +24,8 @@
                      id="formInput#search"
                      type="text"
                      name="search_query"
-                     value="{{ search_query }}"
-                     placeholder="Search by Project Title" />
+                     placeholder="Search by Project Title"
+                     value="{{ search_query }}" />
             </div>
 
             <input class="btn btn--sub btn--lg" type="submit" value="Search" />
@@ -40,7 +43,7 @@
               <div class="card project">
                 <a href="{% url 'project' project.id %}" class="project">
                   <img class="project__thumbnail"
-                       src="{{ project.featured_image.url }}"
+                       src="{{ project.imageURL }}"
                        alt="project thumbnail" />
                   <div class="card__body">
                     <h3 class="project__title">
@@ -48,9 +51,8 @@
                     </h3>
                     <p>
                       <a class="project__author"
-                         href="{% url 'user-profile' project.owner.id %}">
-                        By {{ project.owner.name }}
-                      </a>
+                         href="{% url 'user-profile' project.owner.id %}">By
+                      {{ project.owner.name }}</a>
                     </p>
                     <p class="project--rating">
                       <span style="font-weight: bold;">{{ project.vote_ratio }}%</span> Positive
@@ -62,13 +64,14 @@
                           <small>{{ tag }}</small>
                         </span>
                       {% endfor %}
+
                     </div>
                   </div>
                 </a>
               </div>
             </div>
-
           {% endfor %}
+
         </div>
       </div>
     </section>
@@ -77,4 +80,4 @@
 
   </main>
 
-{% endblock content %}
+{% endblock %}
