--- a/users/templates/users/profiles.html
+++ b/users/templates/users/profiles.html
@@ -75,6 +75,8 @@
       </div>
     </section>
 
+    {% include 'pagination.html' with queryset=profiles custom_range=custom_range %}
+
   </main>
 
 {% endblock content %}
