--- a/projects/templates/projects/single-project.html
+++ b/projects/templates/projects/single-project.html
@@ -35,7 +35,7 @@
   <img class="singleProject__preview"
        src="{{ project.featured_image.url }}"
        alt="portfolio thumbnail" />
-  <a href="profile.html" class="singleProject__developer">Md. Shahriar Parvez</a>
+  <a href="profile.html" class="singleProject__developer">{{ project.owner.name }}</a>
   <h2 class="singleProject__title">
     {{ project.title }}
   </h2>
@@ -69,34 +69,27 @@
     </form>
     <div class="commentList">
       <div class="comment">
-        <a href="profile.html">
-          <img class="avatar avatar--md"
-               src="https://pbs.twimg.com/profile_images/1335382240931368961/b3wSZKj4_400x400.jpg"
-               alt="user" />
-        </a>
-        <div class="comment__details">
-          <a href="profile.html" class="comment__author">Sulamita Ivanov</a>
-          <p class="comment__info">
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Reprehenderit alias numquam perferendis
-            mollitia minus minima exercitationem possimus ab deserunt qui, soluta iusto doloribus eveniet
-            similique consequuntur ratione, dignissimos ut magni laborum quo.
-          </p>
-        </div>
-      </div>
-      <div class="comment">
-        <a href="profile.html">
-          <img class="avatar avatar--md"
-               src="https://avatars.githubusercontent.com/u/33843378"
-               alt="user" />
-        </a>
-        <div class="comment__details">
-          <a href="profile.html" class="comment__author">Dennis Ivanov</a>
-          <p class="comment__info">
-            Consectetur adipisicing elit. Reprehenderit alias numquam perferendis mollitia minus minima
-            exercitationem possimus ab deserunt qui, ratione, dignissimos ut magni laborum quo.
-          </p>
-        </div>
-      </div>
+        {% for review in project.review_set.all %}
+
+          {% if review.body %}
+
+            <a href="{% url 'user-profile' review.owner.id %}">
+              <img class="avatar avatar--md"
+                   src="{{ review.owner.profile_image.url }}"
+                   alt="user" />
+            </a>
+
+            <div class="comment__details">
+              <a href="{% url 'user-profile' review.owner.id %}"
+                 class="comment__author">{{ review.owner.name }}</a>
+              <p class="comment__info">
+                {{ review.body|linebreaksbr }}
+              </p>
+            </div>
+          </div>
+        {% endif %}
+      {% endfor %}
+
     </div>
   </div>
 </div>
