--- a/users/templates/users/login_register.html
+++ b/users/templates/users/login_register.html
@@ -74,7 +74,7 @@
           </p>
         </div>
 
-        <form action="{% url 'login' %}" method="POST" class="form auth__form">
+        <form action="" method="POST" class="form auth__form">
           {% csrf_token %}
 
           <div class="form__field">
