--- a/projects/templates/projects/single-project.html
+++ b/projects/templates/projects/single-project.html
@@ -33,7 +33,7 @@
 </div>
 <div class="column column--2of3">
   <img class="singleProject__preview"
-       src="{{ project.featured_image.url }}"
+       src="{{ project.imageURL }}"
        alt="portfolio thumbnail" />
   <a href="profile.html" class="singleProject__developer">{{ project.owner.name }}</a>
   <h2 class="singleProject__title">
