--- a/users/templates/users/account.html
+++ b/users/templates/users/account.html
@@ -12,7 +12,7 @@
                  href="{% url 'edit-account' %}"><i class="im im-edit"></i> Edit</a>
               <img class="avatar avatar--xl dev__avatar"
                    alt="Avatar"
-                   src="{{ profile.profile_image.url }}" />
+                   src="{{ profile.imageURL }}" />
               <h2 class="dev__name">
                 {{ profile.name }}
               </h2>
@@ -118,7 +118,7 @@
               <tr>
                 <td class="settings__thumbnail">
                   <a href="{% url 'project' project.id %}">
-                    <img src="{{ project.featured_image.url }}" alt="Project Thumbnail" />
+                    <img src="{{ project.imageURL }}" alt="Project Thumbnail" />
                   </a>
                 </td>
                 <td class="settings__tableInfo">
