--- a/projects/templates/projects/single-project.html
+++ b/projects/templates/projects/single-project.html
@@ -35,7 +35,8 @@
   <img class="singleProject__preview"
        src="{{ project.imageURL }}"
        alt="portfolio thumbnail" />
-  <a href="profile.html" class="singleProject__developer">{{ project.owner.name }}</a>
+  <a href="{% url 'user-profile' project.owner.id %}"
+     class="singleProject__developer">{{ project.owner.name }}</a>
   <h2 class="singleProject__title">
     {{ project.title }}
   </h2>
