--- a/users/templates/users/message.html
+++ b/users/templates/users/message.html
@@ -8,7 +8,17 @@
         <h2 class="message__subject">
           {{ message.subject }}
         </h4>
-        <a href="profile.html" class="message__author">{{ message.name }}</a>
+
+        {% if message.sender %}
+          <a href="{% url 'user-profile' message.sender.id %}"
+             class="message__author">{{ message.name }}
+          </a>
+        {% else %}
+          <p class="message__author">
+            {{ message.name }}
+          </p>
+        {% endif %}
+
         <p class="message__date">
           {{ message.created }}
         </p>
