--- a/users/templates/users/profile_form.html
+++ b/users/templates/users/profile_form.html
@@ -2,12 +2,15 @@
 
 {% block content %}
 
+  {% load static %}
+
   <main class="formPage my-xl">
     <div class="content-box">
       <div class="formWrapper">
-        <a class="backButton" href="{% url 'account' %}"><i class="im im-angle-left"></i></a>
-        <br>
-
+        <a class="backButton" href="{% url 'account' %}">
+          <img src="{% static 'images/left-arrow.svg' %}" alt="Left arrow" />
+          <br>
+        </a>
         <form class="form"
               method="POST"
               action="{% url 'edit-account' %}"
