--- a/templates/main.html
+++ b/templates/main.html
@@ -10,7 +10,9 @@
     <meta name="description"
           content="Social network built with Django to share django portfolios" />
     <meta name="keywords" content="Django, Python, Portfolios" />
-    <link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon" />
+    <link rel="shortcut icon"
+          href="{% static 'favicon.ico' %}"
+          type="image/x-icon" />
     <link rel="stylesheet"
           href="https://cdn.iconmonstr.com/1.3.0/css/iconmonstr-iconic-font.min.css" />
     <link rel="stylesheet" href="{% static 'uikit/styles/uikit.css' %}" />
