Update meta data

--- a/templates/main.html
+++ b/templates/main.html
@@ -10,6 +10,10 @@
     <meta name="description"
           content="Social network built with Django to share django portfolios" />
     <meta name="keywords" content="Django, Python, Portfolios" />
+    <meta name="author" content="Kevin van der Schans Delgado" />
+    <meta name="robots" content="index, follow" />
+    <meta property="og:site_name" content="DjangoDevs" />
+    <meta name="google-site-verification" content="verification_token" />
     <link rel="shortcut icon"
           href="{% static 'favicon.ico' %}"
           type="image/x-icon" />
