--- a/templates/main.html
+++ b/templates/main.html
@@ -27,24 +27,14 @@
 
     {% include 'navbar.html' %}
 
-    <!-- {% if messages %}
-      <ul class="messages">
-        {% for message in messages %}
-          <li {% if message.tags %} class="{{ message.tags }}"{% endif %}>
-            {{ message }}
-          </li>
-        {% endfor %}
-      </ul>
-    {% endif %} -->
-
     {% if messages %}
 
       {% for message in messages %}
-        <div class="alert  alert--{{ message.tags }}">
+        <div class="alert  alert--{{ message.tags }}" role="alert">
           <p class="alert__message">
             {{ message }}
           </p>
-          <button class="alert__close">
+          <button class="alert__close" aria-label="Close alert">
             x
           </button>
         </div>
