--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -5,36 +5,42 @@
     <a href="{% url 'profiles' %}" class="header__logo">
       <img src="{% static 'images/logo.svg' %}" alt="DjangoDevs Logo" />
     </a>
+
     <nav class="header__nav">
-      <input type="checkbox" id="responsive-menu" />
-      <label for="responsive-menu" class="toggle-menu">
+      <input type="checkbox"
+             id="responsive-menu"
+             aria-label="Toggle navigation menu" />
+      <label for="responsive-menu" class="toggle-menu" aria-label="Menu">
         <span>Menu</span>
         <div class="toggle-menu__lines">
         </div>
       </label>
+
       <ul class="header__menu">
         <li class="header__menuItem">
-          <a href="{% url 'profiles' %}">Developers</a>
+          <a href="{% url 'profiles' %}" aria-label="Developers">Developers</a>
         </li>
         <li class="header__menuItem">
-          <a href="{% url 'projects' %}">Projects</a>
+          <a href="{% url 'projects' %}" aria-label="Projects">Projects</a>
         </li>
 
         {% if request.user.is_authenticated %}
           <li class="header__menuItem">
-            <a href="{% url 'inbox' %}">Inbox</a>
+            <a href="{% url 'inbox' %}" aria-label="Inbox">Inbox</a>
           </li>
 
           <li class="header__menuItem">
-            <a href="{% url 'account' %}">Account</a>
+            <a href="{% url 'account' %}" aria-label="Account">Account</a>
           </li>
 
           <li class="header__menuItem">
-            <a href="{% url 'logout' %}" class="btn btn--sub">Logout</a>
+            <a href="{% url 'logout' %}" class="btn btn--sub" aria-label="Logout">Logout</a>
           </li>
         {% else %}
           <li class="header__menuItem">
-            <a href="{% url 'login' %}" class="btn btn--sub">Login/Sign Up</a>
+            <a href="{% url 'login' %}"
+               class="btn btn--sub"
+               aria-label="Login or Sign Up">Login/Sign Up</a>
           </li>
         {% endif %}
 
