--- a/templates/pagination.html
+++ b/templates/pagination.html
@@ -1,12 +1,15 @@
 {% if queryset.has_other_pages %}
-  <div class="pagination">
+  <div class="pagination"
+       role="navigation"
+       aria-label="Pagination Navigation">
     <ul class="container">
 
       {% if queryset.has_previous %}
         <li>
           <a href="?page={{ queryset.previous_page_number }}"
              class="btn page-link"
-             data-page="{{ queryset.previous_page_number }}">&#10094; Prev</a>
+             data-page="{{ queryset.previous_page_number }}"
+             aria-label="Previous Page">&#10094; Prev</a>
         </li>
       {% endif %}
 
@@ -16,11 +19,15 @@
           <li>
             <a href="?page={{ page }}"
                class="btn page-link btn--sub"
-               data-page="{{ page }}">{{ page }}</a>
+               data-page="{{ page }}"
+               aria-current="page">{{ page }}</a>
           </li>
         {% else %}
           <li>
-            <a href="?page={{ page }}" class="btn page-link" data-page="{{ page }}">{{ page }}</a>
+            <a href="?page={{ page }}"
+               class="btn page-link"
+               data-page="{{ page }}"
+               aria-label="Page {{ page }}">{{ page }}</a>
           </li>
         {% endif %}
       {% endfor %}
@@ -29,7 +36,8 @@
         <li>
           <a href="?page={{ queryset.next_page_number }}"
              class="btn page-link"
-             data-page="{{ queryset.next_page_number }}">Next &#10095;</a>
+             data-page="{{ queryset.next_page_number }}"
+             aria-label="Next Page">Next &#10095;</a>
         </li>
       {% endif %}
 
