Check reset_password templates

--- a/templates/reset_password_complete.html
+++ b/templates/reset_password_complete.html
@@ -5,16 +5,16 @@
   <main class="formPage my-xl">
     <div class="content-box">
       <div class="formWrapper">
-        <h3>
+        <h1>
           Password reset complete
-        </h3>
+        </h1>
 
         <p>
           Your password has been set. You may go ahead and log in now.
         </p>
         <br>
 
-        <a href="{% url 'login' %}">Login</a>
+        <a href="{% url 'login' %}" aria-label="Login to your account">Login</a>
       </div>
     </div>
   </main>
