--- a/users/templates/users/inbox.html
+++ b/users/templates/users/inbox.html
@@ -17,7 +17,7 @@
               <li class="message">
               {% endif %}
 
-              <a href="{% url 'message' message.id %}">
+              <a href="{% url 'message' message.id %}" aria-label="Read message from {{ message.name }}>
                 <span class="message__author">{{ message.name }}</span>
                 <span class="message__subject">{{ message.subject }}</span>
                 <span class="message__date">{{ message.created }}</span>
