--- a/users/templates/users/message_form.html
+++ b/users/templates/users/message_form.html
@@ -5,7 +5,9 @@
   <main class="formPage my-xl">
     <div class="content-box">
       <div class="formWrapper">
-        <a class="backButton" href="{% url 'user-profile' recipient.id %}"><i class="im im-angle-left"></i></a>
+        <a class="backButton"
+           href="{% url 'user-profile' recipient.id %}"
+           aria-label="Go back to profile"><i class="im im-angle-left"></i></a>
         <br>
 
         <form class="form" method="POST">
