--- a/users/templates/users/profile_form.html
+++ b/users/templates/users/profile_form.html
@@ -7,7 +7,7 @@
   <main class="formPage my-xl">
     <div class="content-box">
       <div class="formWrapper">
-        <a class="backButton" href="{% url 'account' %}">
+        <a class="backButton" href="{% url 'account' %}" aria-label="Back to account">
           <img src="{% static 'images/left-arrow.svg' %}" alt="Left arrow" />
           <br>
         </a>
