--- a/users/templates/users/profiles.html
+++ b/users/templates/users/profiles.html
@@ -43,9 +43,9 @@
 
             <div class="column card">
               <div class="dev">
-                <a href="{% url 'user-profile' profile.id %}" class="card__body">
+                <a href="{% url 'user-profile' profile.id %}" class="card__body" aria-label="Go to user profile">
                   <div class="dev__profile">
-                    <img class="avatar avatar--md" src="{{ profile.imageURL }}" alt="image" />
+                    <img class="avatar avatar--md" src="{{ profile.imageURL }}" alt="image" alt="Profile picture of {{ profile.name }}" />
                     <div class="dev__meta">
                       <h3>
                         {{ profile.name }}
