--- a/users/templates/users/skill_form.html
+++ b/users/templates/users/skill_form.html
@@ -4,7 +4,9 @@
   <main class="formPage my-xl">
     <div class="content-box">
       <div class="formWrapper">
-        <a class="backButton" href="{% url 'account' %}"><i class="im im-angle-left"></i></a>
+        <a class="backButton"
+           href="{% url 'account' %}"
+           aria-label="Back to account"><i class="im im-angle-left"></i></a>
         <br>
 
         <form class="form" method="POST" action="">
