Check projects and single-projects template

--- a/projects/templates/projects/projects.html
+++ b/projects/templates/projects/projects.html
@@ -44,7 +44,7 @@
                 <a href="{% url 'project' project.id %}" class="project">
                   <img class="project__thumbnail"
                        src="{{ project.imageURL }}"
-                       alt="project thumbnail" />
+                       alt="Thumbnail of project {{ project.title }}" />
                   <div class="card__body">
                     <h3 class="project__title">
                       {{ project.title }}
