Fix hljs warning

--- a/templates/main.html
+++ b/templates/main.html
@@ -22,6 +22,8 @@
     <link rel="stylesheet" href="{% static 'uikit/styles/uikit.css' %}" />
     <link rel="stylesheet" href="{% static 'styles/app.css' %}" />
     <title>DjangoDevs</title>
+    <link rel="stylesheet"
+          href="//cdnjs.cloudflare.com/ajax/libs/highlight.js/11.3.1/styles/default.min.css">
   </head>
   <body>
 
@@ -47,6 +49,7 @@
 
     {% endblock content %}
   </body>
+  <script src="//cdnjs.cloudflare.com/ajax/libs/highlight.js/11.3.1/highlight.min.js"></script>
   <script src="{% static 'uikit/app.js' %}"></script>
   <script src="{% static 'js/main.js' %}"></script>
 
