Update meta description

--- a/templates/main.html
+++ b/templates/main.html
@@ -8,7 +8,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description"
-          content="Social network built with Django to share django portfolios" />
+          content="DjangoDevs is a web application designed for developers! Create your own profile, discover developers from around the world, and connect with them to explore new opportunities! " />
     <meta name="keywords" content="Django, Python, Portfolios" />
     <meta name="author" content="Kevin van der Schans Delgado" />
     <meta name="robots" content="index, follow" />
